fix the form elements overlapping in both layouts

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 
 :root {
   --bg-color: #f9fafb;
+  --font-fam: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 html {
@@ -68,7 +69,7 @@ body {
   background: rgba(0, 0, 0, 40%);
   font-size: 120px;
   font-size: min(90px, 120px);
-  font-family: "Norse-Bold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Norse-Bold", var(--font-fam), sans-serif;
   /* border: 6px solid blue; */
 }
 
@@ -82,7 +83,8 @@ body {
 }
 
 .grid-container {
-  padding: 40px;
+  padding: 2% 4%;
+  text-align: left;
 }
 
 .main {
@@ -99,8 +101,20 @@ body {
   border-top: 1px solid #fcf3f3af;
   /* border: 1px solid red; */
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 0.5fr 1fr;
+  grid-template-areas:
+    "h3 h3"
+    "form form"
+  ;
+  column-gap: 6px;
 
+}
+
+h3 {
+  grid-area: h3;
+  margin-bottom: 0px;
+  padding: 14px;
 }
 
 .footer {
@@ -130,30 +144,41 @@ li {
   display: inline;
 } */
 
-.form-part1 {
-  display: inline-block;
-  
-}
+.form-part1,
 .form-part2 {
+  box-sizing: border-box;
   display: inline-block;
+  min-height: 150px;
+
+  min-width: 200px;
+  padding: 14px;
+  font-size: 10px;
+  font-weight: 600;
+  white-space: nowrap;
 }
 
 
-label { 
+
+label {
   display: flex;
   width: 90px;
-  /* text-align: right; */
 
 }
 
-input, button {
+
+input,
+button {
   font-family: inherit;
   font-size: 100%;
-  width : 150px;
+  width: 400px;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  margin: 0px 0px 20px 0px;
+  padding: 6px;
+  width: 200px;
 }
+
 
 @media only screen and (max-width: 800px) {
   .container {
@@ -164,7 +189,7 @@ input, button {
       "main"
       "form"
       "footer";
-    text-align: center;
+    /* text-align: center; */
   }
 
   .sidebar {
@@ -192,27 +217,35 @@ input, button {
     /* font-size: max(3rem, 5rem, 100%); */
   }
 
-  input, button {
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+  }
+
+  /* input, button {
     font-family: inherit;
     font-size: 100%;
     width : 150px;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-  }
+  } */
 
-  .form-part1, .form-part2 {
+  .form-part1,
+  .form-part2 {
     display: inline-block;
-    
+    white-space: normal;
   }
 
-  input, label {
+  input,
+  label {
+    display: inline-block;
     width: 200px;
-    text-align: left;
   }
-  
-  
-  
+
+
+
 
 
 }
